# Server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  changelog.txt  eqmacemu_changelog.txt
common/: CMakeLists.txt  base_packet.cpp  base_packet.h  bodytypes.cpp  bodytypes.h  chat_oplist.h  classes.cpp  classes.h  crash.cpp  data_verification.h  database.cpp  database.h  database_schema.h  dbcore.cpp  dbcore.h  deity.cpp  deity.h  discord_manager.cpp  discord_manager.h  emu_constants.cpp  emu_constants.h  emu_limits.cpp  emu_limits.h  emu_opcodes.cpp  emu_opcodes.h  emu_oplist.h  emu_tcp_connection.cpp  emu_tcp_connection.h  emu_tcp_server.cpp  emu_tcp_server.h  emu_versions.cpp  emu_versions.h  eq_constants.h  eq_limits.cpp  eq_limits.h  eq_packet.cpp  eq_packet.h  eq_packet_structs.h  eq_stream.cpp  eq_stream.h  (+120 more)
common/SocketLib/: MemFile.cpp
common/StackWalker/: StackWalker.cpp  StackWalker.h
common/cli/: eqemu_command_handler.cpp  eqemu_command_handler.h  terminal_color.hpp
common/content/: world_content_service.cpp  world_content_service.h
common/database/: database_dump_service.cpp  database_dump_service.h
common/discord/: discord.cpp  discord.h  discord_manager.cpp  discord_manager.h
common/event/: background_task.h  timer.h
common/events/: player_event_discord_formatter.cpp  player_event_discord_formatter.h  player_event_logs.cpp  player_event_logs.h  player_events.h
common/json/: json.h  jsoncpp.cpp
common/net/: console_server_connection.cpp  daybreak_connection.cpp  daybreak_connection.h  eqstream.cpp  eqstream.h  reliable_stream_connection.cpp  servertalk_server_connection.cpp
common/patches/: mac.cpp  mac.h  mac_limits.cpp  mac_limits.h  mac_ops.h  mac_structs.h  patches.cpp  ss_declare.h  ss_define.h
common/pch/: app-pch.h  std-pch.h
common/process/: process.cpp  process.h
common/repositories/: aa_actions_repository.h  aa_effects_repository.h  aa_required_level_cost_repository.h  account_repository.h  altadv_vars_repository.h  character_faction_values_repository.h  character_inventory_repository.h  character_timers_repository.h  character_zone_flags_repository.h  command_subsettings_repository.h  grid_entries_repository.h  grid_repository.h  items_repository.h  lootdrop_entries_repository.h  player_event_log_settings_repository.h  player_event_merchant_purchase_repository.h  rule_sets_repository.h  rule_values_repository.h
common/repositories/base/: base_aa_actions_repository.h  base_aa_effects_repository.h  base_aa_required_level_cost_repository.h  base_account_flags_repository.h  base_account_ip_repository.h  base_account_repository.h  base_account_rewards_repository.h  base_altadv_vars_repository.h  base_base_data_repository.h  base_blocked_spells_repository.h  base_bug_reports_repository.h  base_bugs_repository.h  base_char_create_combinations_repository.h  base_char_create_point_allocations_repository.h  base_character_alternate_abilities_repository.h  base_character_bind_repository.h  base_character_buffs_repository.h  base_character_corpse_items_repository.h  base_character_corpses_repository.h  base_character_currency_repository.h  base_character_data_repository.h  base_character_faction_values_repository.h  base_character_inspect_messages_repository.h  base_character_inventory_repository.h  base_character_languages_repository.h  base_character_material_repository.h  base_character_memmed_spells_repository.h  base_character_pet_buffs_repository.h  base_character_pet_info_repository.h  base_character_pet_inventory_repository.h  base_character_skills_repository.h  base_character_spells_repository.h  base_character_timers_repository.h  base_character_zone_flags_repository.h  base_content_flags_repository.h  base_damageshieldtypes_repository.h  base_data_buckets_repository.h  base_discovered_items_repository.h  base_doors_repository.h  base_faction_list_mod_repository.h  (+68 more)
common/tinyxml/: tinystr.h  tinyxml.h
world/: CMakeLists.txt  account_reservation_manager.cpp  account_reservation_manager.h  char_create_data.h  client.cpp  client.h  cliententry.cpp  cliententry.h  clientlist.cpp  clientlist.h  console.cpp  console.h  console.old.cpp  eqemu_api_world_data_service.cpp  eqemu_api_world_data_service.h  eql_config.cpp  launcher_link.cpp  launcher_link.h  launcher_list.cpp  login_server.cpp  login_server.h  login_server_list.cpp  login_server_list.h  main.cpp  main.h  net.cpp  player_start_location.cpp  player_start_location.h  queryserv.cpp  queryserv.h  remote_call.cpp  ucs.cpp  ucs.h  web_interface.cpp  web_interface.h  web_interface_eqw.cpp  wguild_mgr.cpp  wguild_mgr.h  world_boot.cpp  world_boot.h  (+18 more)
world/cli/: database_dump.cpp  database_get_schema.cpp  database_set_account_status.cpp  database_version.cpp  test.cpp  test_expansion.cpp  version.cpp
zone/: CMakeLists.txt  aa.cpp  aa.h  aggro.cpp  api_service.cpp  api_service.h  attack.cpp  beacon.cpp  beacon.h  bonuses.cpp  buffstacking.cpp  cheat_manager.cpp  cheat_manager.h  client.cpp  client.h  client_mods.cpp  client_packet.cpp  client_packet.h  client_process.cpp  combat_record.cpp  combat_record.h  command.cpp  command.h  common.h  corpse.cpp  corpse.h  data_bucket.cpp  doors.cpp  doors.h  effects.cpp  encounter.cpp  encounter.h  entity.cpp  entity.h  event_codes.h  exp.cpp  fearpath.cpp  forage.cpp  forage.h  global_loot_manager.cpp  (+128 more)
zone/cli/: npc_handins.cpp
zone/gm_commands/: advnpcspawn.cpp  aggro.cpp  aggrozone.cpp  ai.cpp  altactivate.cpp  appearance.cpp  attack.cpp  attackentity.cpp  ban.cpp  beard.cpp  beardcolor.cpp  bestz.cpp  bind.cpp  boatinfo.cpp  bug.cpp  castspell.cpp  chat.cpp  chattest.cpp  checklos.cpp  cleartimers.cpp  connectworldserver.cpp  corpse.cpp  crashtest.cpp  cvs.cpp  d1.cpp  damage.cpp  damagetotals.cpp  date.cpp  dbspawn2.cpp  delacct.cpp  deletegraveyard.cpp  depop.cpp  depopzone.cpp  disablerecipe.cpp  distance.cpp  doanim.cpp  emote.cpp  emotesearch.cpp  emoteview.cpp  enablerecipe.cpp  (+226 more)
zone/gm_commands/find/: body_type.cpp  class.cpp  (+11 more)
zone/pch/: pch.h
zone/sidecar_api/: loot_simulator_controller.cpp  sidecar_api.cpp
(+522 files in other folders)
