CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

SET(common_sources
	base_packet.cpp
	bodytypes.cpp
	classes.cpp
	cli/eqemu_command_handler.cpp
	condition.cpp
	content/world_content_service.cpp
	crash.cpp
	crc16.cpp
	crc32.cpp
	database/database_dump_service.cpp
	database.cpp
	deity.cpp
	dbcore.cpp
	discord/discord.cpp
	discord/discord_manager.cpp
	emu_constants.cpp
	emu_limits.cpp
	emu_opcodes.cpp
	emu_versions.cpp
	eqdb.cpp
	eqdb_res.cpp
	eqemu_exception.cpp
	eqemu_config.cpp
	eqemu_logsys.cpp
	eq_limits.cpp
	eq_packet.cpp
	eq_stream.cpp
	eq_stream_factory.cpp
	eq_stream_ident.cpp
	eq_stream_proxy.cpp
	eqtime.cpp
	event_sub.cpp
	events/player_event_logs.cpp
    	events/player_event_discord_formatter.cpp
	extprofile.cpp
	faction.cpp
	fastmath.cpp
	file.cpp
	guild_base.cpp
	inventory_profile.cpp
	ipc_mutex.cpp
	ip_util.cpp
	item_data.cpp
	item_instance.cpp
	json_config.cpp
	light_source.cpp
	md5.cpp
	memory_buffer.cpp
	memory_mapped_file.cpp
	misc.cpp
	misc_functions.cpp
	mutex.cpp
	mysql_request_result.cpp
	mysql_request_row.cpp
	opcode_map.cpp
	opcodemgr.cpp
	packet_dump.cpp
	packet_dump_file.cpp
	packet_functions.cpp
	path_manager.cpp
	process/process.cpp
	process.cpp
	proc_launcher.cpp
	profanity_manager.cpp
	ptimer.cpp
	races.cpp
	rdtsc.cpp
	rulesys.cpp
	say_link.cpp
	server_event_scheduler.cpp
	serverinfo.cpp
	sha1.cpp
	shareddb.cpp
	skills.cpp
	skill_caps.cpp
	spdat.cpp
	strings.cpp
	struct_strategy.cpp
	textures.cpp
	timeoutmgr.cpp
	timer.cpp
	unix.cpp
	uuid.cpp
	xml_parser.cpp
	platform.cpp
	zone_store.cpp
	net/crc32.cpp
	net/daybreak_connection.cpp
	net/eqstream.cpp
	net/packet.cpp
	net/console_server.cpp
	net/console_server_connection.cpp
	net/servertalk_client_connection.cpp
	net/servertalk_legacy_client_connection.cpp
	net/servertalk_server.cpp
	net/servertalk_server_connection.cpp
	net/tcp_connection.cpp
	net/tcp_server.cpp
	net/websocket_server.cpp
	net/websocket_server_connection.cpp
	json/json.hpp
	json/jsoncpp.cpp
	patches/patches.cpp
	patches/mac.cpp
	patches/mac_limits.cpp
	StackWalker/StackWalker.cpp
	tinyxml/tinystr.cpp
	tinyxml/tinyxml.cpp
	tinyxml/tinyxmlerror.cpp
	tinyxml/tinyxmlparser.cpp
	util/uuid.cpp
)

SET(repositories
    # Criteria
    repositories/criteria/content_filter_criteria.h

    # Base Repositories
    repositories/base/base_blocked_spells_repository.h
    repositories/base/base_bugs_repository.h
    repositories/base/base_char_create_combinations_repository.h
    repositories/base/base_char_create_point_allocations_repository.h
    repositories/base/base_character_alternate_abilities_repository.h
    repositories/base/base_character_bind_repository.h
    repositories/base/base_character_buffs_repository.h
    repositories/base/base_character_corpse_items_repository.h
    repositories/base/base_character_corpses_repository.h
    repositories/base/base_character_currency_repository.h
    repositories/base/base_character_data_repository.h
    repositories/base/base_character_faction_values_repository.h
    repositories/base/base_character_inspect_messages_repository.h
    repositories/base/base_character_inventory_repository.h
    repositories/base/base_character_languages_repository.h
    repositories/base/base_character_material_repository.h
    repositories/base/base_character_memmed_spells_repository.h
    repositories/base/base_character_pet_buffs_repository.h
    repositories/base/base_character_pet_info_repository.h
    repositories/base/base_character_pet_inventory_repository.h
    repositories/base/base_character_skills_repository.h
    repositories/base/base_character_spells_repository.h
    repositories/base/base_character_timers_repository.h
    repositories/base/base_character_zone_flags_repository.h
    repositories/base/base_content_flags_repository.h
    repositories/base/base_damageshieldtypes_repository.h
    repositories/base/base_discovered_items_repository.h
    repositories/base/base_doors_repository.h
    repositories/base/base_faction_list_mod_repository.h
    repositories/base/base_faction_list_repository.h
    repositories/base/base_fishing_repository.h
    repositories/base/base_forage_repository.h
    repositories/base/base_friends_repository.h
    repositories/base/base_gm_ips_repository.h
    repositories/base/base_graveyard_repository.h
    repositories/base/base_grid_entries_repository.h
    repositories/base/base_grid_repository.h
    repositories/base/base_ground_spawns_repository.h
    repositories/base/base_group_id_repository.h
    repositories/base/base_group_leaders_repository.h
    repositories/base/base_guild_members_repository.h
    repositories/base/base_guild_ranks_repository.h
    repositories/base/base_guilds_repository.h
    repositories/base/base_item_tick_repository.h
    repositories/base/base_items_repository.h
    repositories/base/base_level_exp_mods_repository.h
    repositories/base/base_logsys_categories_repository.h
    repositories/base/base_lootdrop_entries_repository.h
    repositories/base/base_lootdrop_repository.h
    repositories/base/base_loottable_entries_repository.h
    repositories/base/base_loottable_repository.h
    repositories/base/base_merchantlist_repository.h
    repositories/base/base_merchantlist_temp_repository.h
    repositories/base/base_npc_emotes_repository.h
    repositories/base/base_npc_faction_entries_repository.h
    repositories/base/base_npc_faction_repository.h
    repositories/base/base_npc_spells_effects_entries_repository.h
    repositories/base/base_npc_spells_effects_repository.h
    repositories/base/base_npc_spells_entries_repository.h
    repositories/base/base_npc_spells_repository.h
    repositories/base/base_npc_types_repository.h
    repositories/base/base_npc_types_tint_repository.h
    repositories/base/base_object_contents_repository.h
    repositories/base/base_object_repository.h
    repositories/base/base_petitions_repository.h
    repositories/base/base_pets_repository.h
    repositories/base/base_player_titlesets_repository.h
    repositories/base/base_player_event_aa_purchase_repository.h
    repositories/base/base_player_event_killed_npc_repository.h
    repositories/base/base_player_event_killed_named_npc_repository.h
    repositories/base/base_player_event_killed_raid_npc_repository.h
    repositories/base/base_player_event_log_settings_repository.h
    repositories/base/base_player_event_logs_repository.h
    repositories/base/base_player_event_loot_items_repository.h
    repositories/base/base_player_event_merchant_purchase_repository.h
    repositories/base/base_player_event_merchant_sell_repository.h
    repositories/base/base_player_event_npc_handin_repository.h
    repositories/base/base_player_event_npc_handin_entries_repository.h
    repositories/base/base_player_event_speech_repository.h
    repositories/base/base_player_event_trade_repository.h
    repositories/base/base_player_event_trade_entries_repository.h
    repositories/base/base_quest_globals_repository.h
    repositories/base/base_raid_details_repository.h
    repositories/base/base_raid_members_repository.h
    repositories/base/base_reports_repository.h
    repositories/base/base_respawn_times_repository.h
    repositories/base/base_rule_sets_repository.h
    repositories/base/base_rule_values_repository.h
    repositories/base/base_saylink_repository.h
    repositories/base/base_server_scheduled_events_repository.h
    repositories/base/base_skill_caps_repository.h
    repositories/base/base_spawn_condition_values_repository.h
    repositories/base/base_spawn_conditions_repository.h
    repositories/base/base_spawn_events_repository.h
    repositories/base/base_spawn2_repository.h
    repositories/base/base_spawnentry_repository.h
    repositories/base/base_spawngroup_repository.h
    repositories/base/base_spell_globals_repository.h
    repositories/base/base_spells_new_repository.h
    repositories/base/base_start_zones_repository.h
    repositories/base/base_starting_items_repository.h
    repositories/base/base_titles_repository.h
    repositories/base/base_trader_repository.h
    repositories/base/base_tradeskill_recipe_entries_repository.h
    repositories/base/base_tradeskill_recipe_repository.h
    repositories/base/base_traps_repository.h
    repositories/base/base_zone_points_repository.h
    repositories/base/base_zone_repository.h
    repositories/base/base_aa_actions_repository.h
    repositories/base/base_aa_effects_repository.h
    repositories/base/base_account_flags_repository.h
    repositories/base/base_account_ip_repository.h
    repositories/base/base_account_repository.h
    repositories/base/base_altadv_vars_repository.h
	
    # Extended Repositories
    repositories/bugs_repository.h
    repositories/char_create_combinations_repository.h
    repositories/char_create_point_allocations_repository.h
    repositories/character_alternate_abilities_repository.h
    repositories/character_bind_repository.h
    repositories/character_buffs_repository.h
    repositories/character_corpse_items_repository.h
    repositories/character_corpses_repository.h
    repositories/character_currency_repository.h
    repositories/character_data_repository.h
    repositories/character_faction_values_repository.h
    repositories/character_inspect_messages_repository.h
    repositories/character_inventory_repository.h
    repositories/character_languages_repository.h
    repositories/character_material_repository.h
    repositories/character_memmed_spells_repository.h
    repositories/character_pet_buffs_repository.h
    repositories/character_pet_info_repository.h
    repositories/character_pet_inventory_repository.h
    repositories/character_skills_repository.h
    repositories/character_spells_repository.h
    repositories/character_timers_repository.h
    repositories/character_zone_flags_repository.h
    repositories/content_flags_repository.h
    repositories/damageshieldtypes_repository.h
    repositories/discovered_items_repository.h
    repositories/doors_repository.h
    repositories/faction_list_mod_repository.h
    repositories/faction_list_repository.h
    repositories/fishing_repository.h
    repositories/forage_repository.h
    repositories/friends_repository.h
    repositories/gm_ips_repository.h
    repositories/graveyard_repository.h
    repositories/grid_entries_repository.h
    repositories/grid_repository.h
    repositories/ground_spawns_repository.h
    repositories/group_id_repository.h
    repositories/group_leaders_repository.h
    repositories/guild_members_repository.h
    repositories/guild_ranks_repository.h
    repositories/guilds_repository.h
    repositories/item_tick_repository.h
    repositories/items_repository.h
    repositories/level_exp_mods_repository.h
    repositories/logsys_categories_repository.h
    repositories/lootdrop_entries_repository.h
    repositories/lootdrop_repository.h
    repositories/loottable_entries_repository.h
    repositories/loottable_repository.h
    repositories/merchantlist_repository.h
    repositories/merchantlist_temp_repository.h
    repositories/npc_emotes_repository.h
    repositories/npc_faction_entries_repository.h
    repositories/npc_faction_repository.h
    repositories/npc_spells_effects_entries_repository.h
    repositories/npc_spells_effects_repository.h
    repositories/npc_spells_entries_repository.h
    repositories/npc_spells_repository.h
    repositories/npc_types_repository.h
    repositories/npc_types_tint_repository.h
    repositories/object_contents_repository.h
    repositories/object_repository.h
    repositories/petitions_repository.h
    repositories/pets_repository.h
    repositories/player_titlesets_repository.h
    repositories/player_event_aa_purchase_repository.h
    repositories/player_event_killed_npc_repository.h
    repositories/player_event_killed_named_npc_repository.h
    repositories/player_event_killed_raid_npc_repository.h
    repositories/player_event_log_settings_repository.h
    repositories/player_event_logs_repository.h
    repositories/player_event_loot_items_repository.h
    repositories/player_event_merchant_purchase_repository.h
    repositories/player_event_merchant_sell_repository.h
    repositories/player_event_npc_handin_repository.h
    repositories/player_event_npc_handin_entries_repository.h
    repositories/player_event_speech_repository.h
    repositories/player_event_trade_repository.h
    repositories/player_event_trade_entries_repository.h
    repositories/quest_globals_repository.h
    repositories/raid_details_repository.h
    repositories/raid_members_repository.h
    repositories/reports_repository.h
    repositories/respawn_times_repository.h
    repositories/rule_sets_repository.h
    repositories/rule_values_repository.h
    repositories/saylink_repository.h
    repositories/server_scheduled_events_repository.h
    repositories/skill_caps_repository.h
    repositories/spawn_condition_values_repository.h
    repositories/spawn_conditions_repository.h
    repositories/spawn_events_repository.h
    repositories/spawn2_repository.h
    repositories/spawnentry_repository.h
    repositories/spawngroup_repository.h
    repositories/spell_globals_repository.h
    repositories/spells_new_repository.h
    repositories/start_zones_repository.h
    repositories/starting_items_repository.h
    repositories/titles_repository.h
    repositories/trader_repository.h
    repositories/tradeskill_recipe_entries_repository.h
    repositories/tradeskill_recipe_repository.h
    repositories/traps_repository.h
    repositories/zone_points_repository.h
    repositories/zone_repository.h
    repositories/aa_actions_repository.h
    repositories/aa_effects_repository.h
    repositories/account_flags_repository.h
    repositories/account_ip_repository.h
    repositories/account_repository.h
    repositories/altadv_vars_repository.h
    repositories/blocked_spells_repository.h
)

SET(common_headers
	additive_lagged_fibonacci_engine.h
	base_packet.h
	bodytypes.h
	chat_oplist.h
	classes.h
	cli/argh.h
	cli/eqemu_command_handler.h
	cli/terminal_color.hpp
	cron/croncpp.h
	database/database_dump_service.h
	condition.h
	content/world_content_service.h
	crash.h
	crc16.h
	crc32.h
	data_verification.h
	database.h
	database_schema.h
	dbcore.h
	deity.h
	discord/discord.h
	discord/discord_manager.h
	emu_constants.h
	emu_limits.h
	emu_opcodes.h
	emu_oplist.h
	emu_versions.h
	eq_constants.h
	eq_packet_structs.h
	eqdb.h
	eqdb_res.h
	eqemu_exception.h
	eqemu_config.h
	eqemu_config_elements.h
	eqemu_logsys.h
	eqemu_logsys_log_aliases.h
	eq_limits.h
	eq_packet.h
	eq_stream.h
	eq_stream_factory.h
	eq_stream_ident.h
	eq_stream_intf.h
	eq_stream_locator.h
	eq_stream_proxy.h
	eq_stream_type.h
	eqtime.h
	event_sub.h
	events/player_event_logs.h
    events/player_event_discord_formatter.h
    events/player_events.h
	extprofile.h
	faction.h
	fastmath.h
	features.h
	file.h
	fixed_memory_hash_set.h
	fixed_memory_variable_hash_set.h
	global_define.h
	guild_base.h
	guilds.h
	http/httplib.h
	http/uri.h
	inventory_profile.h
	ipc_mutex.h
	ip_util.h
	item_data.h
	item_fieldlist.h
	item_instance.h
	json_config.h
	light_source.h
	linked_list.h
	loot.h
	md5.h
	memory_buffer.h
	memory_mapped_file.h
	misc.h
	misc_functions.h
	mutex.h
	mysql_request_result.h
	mysql_request_row.h
	op_codes.h
	opcodemgr.h
	packet_dump.h
	packet_dump_file.h
	packet_functions.h
	path_manager.h
	platform.h
	process/process.h
	process.h
	proc_launcher.h
	profanity_manager.h
	profiler.h
	ptimer.h
	queue.h
	races.h
	random.h
	rdtsc.h
	rulesys.h
	ruletypes.h
	say_link.h
	seperator.h
	server_event_scheduler.h
	serverinfo.h
	servertalk.h
	server_reload_types.h
	sha1.h
	shareddb.h
	skills.h
	skill_caps.h
	spdat.h
    	strings.h
	struct_strategy.h
	textures.h
	timeoutmgr.h
	timer.h
	types.h
	unix.h
	uuid.h
	version.h
	xml_parser.h
	zone_numbers.h
	zone_store.h
	platform.h
	json/json_archive_single_line.h
	json/json.h
	json/json-forwards.h
	event/event_loop.h
	event/timer.h
	event/task.h
	net/console_server.h
	net/console_server_connection.h
	net/crc32.h
	net/daybreak_connection.h
	net/daybreak_pooling.h
	net/daybreak_structs.h
	net/dns.h
	net/endian.h
	net/eqstream.h
	net/packet.h
	net/servertalk_client_connection.h
	net/servertalk_legacy_client_connection.h
	net/servertalk_common.h
	net/servertalk_server.h
	net/servertalk_server_connection.h
	net/tcp_connection.h
	net/tcp_connection_pooling.h
	net/tcp_server.h
	net/websocket_server.h
	net/websocket_server_connection.h
	patches/patches.h
	patches/mac.h
	patches/mac_limits.h
	patches/mac_ops.h
	patches/mac_structs.h
	patches/ss_declare.h
	patches/ss_define.h
	patches/ss_register.h
	StackWalker/StackWalker.h
	termcolor/rang.hpp
	tinyxml/tinystr.h
	tinyxml/tinyxml.h
	util/memory_stream.h
	util/uuid.h
)

SOURCE_GROUP(Event FILES
	event/event_loop.h
	event/timer.h
	event/task.h
)

SOURCE_GROUP(Json FILES
	json/json.h
	json/jsoncpp.cpp
	json/json-forwards.h
)

SOURCE_GROUP(Net FILES
	net/console_server.cpp
	net/console_server.h
	net/console_server_connection.cpp
	net/console_server_connection.h
	net/crc32.cpp
	net/crc32.h
	net/daybreak_connection.cpp
	net/daybreak_connection.h
	net/daybreak_pooling.h
	net/daybreak_structs.h
	net/dns.h
	net/endian.h
	net/eqmq.cpp
	net/eqmq.h
	net/eqstream.h
	net/eqstream.cpp
	net/packet.cpp
	net/packet.h
	net/servertalk_client_connection.cpp
	net/servertalk_client_connection.h
	net/servertalk_legacy_client_connection.cpp
	net/servertalk_legacy_client_connection.h
	net/servertalk_common.h
	net/servertalk_server.cpp
	net/servertalk_server.h
	net/servertalk_server_connection.cpp
	net/servertalk_server_connection.h
	net/tcp_connection.cpp
	net/tcp_connection.h
	net/tcp_connection_pooling.h
	net/tcp_server.cpp
	net/tcp_server.h
	net/websocket_server.cpp
	net/websocket_server.h
	net/websocket_server_connection.cpp
	net/websocket_server_connection.h
)

SOURCE_GROUP(Patches FILES
	patches/patches.h
	patches/ss_declare.h
	patches/ss_define.h
	patches/ss_register.h
	patches/patches.cpp
	patches/mac.h
	patches/mac_ops.h
	patches/mac_structs.h
	patches/mac_limits.h
	patches/mac.cpp
	patches/mac_limits.cpp
)

SOURCE_GROUP(StackWalker FILES
	StackWalker/StackWalker.h
	StackWalker/StackWalker.cpp
)

SOURCE_GROUP(TinyXML FILES
	tinyxml/tinystr.h
	tinyxml/tinyxml.h
	tinyxml/tinystr.cpp
	tinyxml/tinyxml.cpp
	tinyxml/tinyxmlerror.cpp
	tinyxml/tinyxmlparser.cpp
)

SOURCE_GROUP(Util FILES
	util/memory_stream.h
	util/uuid.cpp
	util/uuid.h
)

INCLUDE_DIRECTORIES(Patches SocketLib StackWalker TinyXML)

ADD_LIBRARY(common ${common_sources} ${common_headers} ${repositories})

IF(UNIX)
	SET_SOURCE_FILES_PROPERTIES("patches/mac.cpp" PROPERTIES COMPILE_FLAGS -O0)
ENDIF(UNIX)

IF (WIN32 AND EQEMU_BUILD_PCH)
    TARGET_PRECOMPILE_HEADERS(common PRIVATE pch/std-pch.h)
ENDIF()

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
